--- a/src/cristal/tresorerie/view/Activité (prod&vente).fxml
+++ b/src/cristal/tresorerie/view/Activité (prod&vente).fxml
@@ -8,7 +8,7 @@
    <children>
       <TabPane layoutY="-1.0" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-            <Tab text="Activité">
+            <Tab text="Ventes">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -30,7 +30,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView layoutX="17.0" layoutY="21.0" prefHeight="294.0" prefWidth="567.0">
+                        <TableView layoutX="17.0" layoutY="21.0" prefHeight="300.0" prefWidth="567.0">
                           <columns>
                             <TableColumn prefWidth="99.0" text="Type" />
                             <TableColumn prefWidth="157.0" text="Coût de production" />
@@ -40,8 +40,8 @@
                         </TableView>
                         <Button layoutX="528.0" layoutY="333.0" mnemonicParsing="false" text="Suivant" />
                         <Button layoutX="437.0" layoutY="333.0" mnemonicParsing="false" text="Précédent" />
-                        <Button layoutX="17.0" layoutY="320.0" mnemonicParsing="false" text="Modifier" />
-                        <Button layoutX="105.0" layoutY="320.0" mnemonicParsing="false" text="Supprimer" />
+                        <Button layoutX="17.0" layoutY="333.0" mnemonicParsing="false" text="Modifier" />
+                        <Button layoutX="105.0" layoutY="333.0" mnemonicParsing="false" text="Supprimer" />
                      </children>
                   </AnchorPane>
               </content>
@@ -62,6 +62,75 @@
                         <RadioButton layoutX="362.0" layoutY="240.0" mnemonicParsing="false" text="Non" />
                         <Label layoutX="98.0" layoutY="283.0" text="Si oui, précisez le montant ici:" />
                         <TextField layoutX="330.0" layoutY="278.0" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
+            <Tab text="Produits exceptionnels">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="myTab">
+                     <children>
+                        <Button layoutX="29.0" layoutY="26.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="80.0" styleClass="myButton" text="Ajouter" />
+                        <Button layoutX="29.0" layoutY="82.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="79.0" styleClass="myButton" text="Modifer" />
+                        <Button layoutX="29.0" layoutY="139.0" mnemonicParsing="false" styleClass="myButton" text="Supprimer" />
+                        <Label layoutX="191.0" layoutY="31.0" styleClass="myLabel" text="Type:" />
+                        <Label layoutX="191.0" layoutY="87.0" styleClass="myLabel" text="Nom:" />
+                        <Label layoutX="191.0" layoutY="144.0" styleClass="myLabel" text="Résultat occasionné:" />
+                        <ComboBox editable="true" layoutX="384.0" layoutY="26.0" prefWidth="150.0" promptText="Choisissez:" styleClass="myComboBox" />
+                        <TextField layoutX="378.0" layoutY="82.0" styleClass="myTextField" />
+                        <TextField layoutX="378.0" layoutY="139.0" styleClass="myTextField" />
+                        <TableView layoutX="11.0" layoutY="184.0" prefHeight="145.0" prefWidth="578.0">
+                          <columns>
+                            <TableColumn prefWidth="160.0" text="Type" />
+                            <TableColumn prefWidth="209.0" text="Nom" />
+                              <TableColumn prefWidth="208.0" text="Résultat occasionné" />
+                          </columns>
+                        </TableView>
+                        <Button layoutX="528.0" layoutY="340.0" mnemonicParsing="false" styleClass="myButton" text="Suivant" />
+                        <Button layoutX="439.0" layoutY="340.0" mnemonicParsing="false" styleClass="myButton" text="Précédent" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
+            <Tab styleClass="myTab" text="Charges exceptionnelles">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button layoutX="27.0" layoutY="22.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="80.0" styleClass="myButton" text="Ajouter" />
+                        <Button layoutX="27.0" layoutY="80.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="80.0" styleClass="myButton" text="Modifier" />
+                        <Button layoutX="27.0" layoutY="139.0" mnemonicParsing="false" styleClass="myButton" text="Supprimer" />
+                        <Label layoutX="202.0" layoutY="27.0" styleClass="myLabel" text="Type:" />
+                        <Label layoutX="202.0" layoutY="85.0" styleClass="myLabel" text="Nom:" />
+                        <Label layoutX="202.0" layoutY="144.0" styleClass="myLabel" text="Coût occasionné:" />
+                        <ComboBox editable="true" layoutX="386.0" layoutY="22.0" prefWidth="150.0" promptText="Choisissez" styleClass="myComboBox" />
+                        <TextField layoutX="380.0" layoutY="80.0" styleClass="myTextField" />
+                        <TextField layoutX="380.0" layoutY="139.0" styleClass="myTextField" />
+                        <TableView layoutX="7.0" layoutY="188.0" prefHeight="145.0" prefWidth="587.0">
+                          <columns>
+                            <TableColumn prefWidth="171.0" text="Type" />
+                            <TableColumn prefWidth="199.0" text="Nom" />
+                              <TableColumn prefWidth="216.0" text="Coût occasionné" />
+                          </columns>
+                        </TableView>
+                        <Button layoutX="528.0" layoutY="340.0" mnemonicParsing="false" styleClass="myButton" text="Suivant" />
+                        <Button layoutX="432.0" layoutY="340.0" mnemonicParsing="false" styleClass="myButton" text="Précédent" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
+            <Tab text="Autres services extérieurs">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="46.0" layoutY="47.0" styleClass="myLabel" text="Avez vous eu des frais liés à vos locations (crédits bails, entretien, réparation etc)?" />
+                        <RadioButton layoutX="46.0" layoutY="88.0" mnemonicParsing="false" styleClass="myRadioButton" text="Oui" />
+                        <RadioButton layoutX="175.0" layoutY="88.0" mnemonicParsing="false" styleClass="myRadioButton" text="Non" />
+                        <Label layoutX="46.0" layoutY="138.0" styleClass="myLabel" text="Si oui, saisissez le montant global:" />
+                        <TextField layoutX="345.0" layoutY="133.0" styleClass="myTextField" />
+                        <Label layoutX="46.0" layoutY="203.0" styleClass="myLabel" text="Quel est le montant total (mensuel) de vos services bancaires?" />
+                        <TextField layoutX="345.0" layoutY="251.0" styleClass="myTextField" />
+                        <Button layoutX="532.0" layoutY="334.0" mnemonicParsing="false" styleClass="myButton" text="Suivant" />
+                        <Button layoutX="440.0" layoutY="334.0" mnemonicParsing="false" styleClass="myButton" text="Précédent" />
                      </children>
                   </AnchorPane>
               </content>
