--- a/src/cristal/tresorerie/view/Ventes&ActiviteExceptionnelle.fxml
+++ b/src/cristal/tresorerie/view/Ventes&ActiviteExceptionnelle.fxml
@@ -8,7 +8,7 @@
    <children>
       <TabPane layoutY="-1.0" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-            <Tab text="Ventes">
+            <Tab text="Ajouter une vente">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
